<resources>
    <string name="app_name">Ruta en tiempo real</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menú</string>
    <string name="nav_header_subtitle">Rutas en Tiempo Real</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="rutas_mensaje">Ve a configuración y da clic en actualizar datos para descargar las rutas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_routes">Ver Rutas</string>
    <string name="menu_real_time_routes">Compartir ubicación</string>
    <string name="menu_report_problem">Reportar un problema</string>
    <string name="menu_configuration">Configuración</string>
    <string name="title_activity_maps">Map</string>

    <string name="fab_ida">IDA</string>
    <string name="fab_regreso">REGRESO</string>

    <string name="config_Nombre">Nombre</string>
    <string name="config_nombre_hint">Ingresa tu nombre</string>
    <string name="config_Contacto">Contacto</string>
    <string name="config_contacto_hint">Ingresa tu correo electrónico</string>
    <string name="config_problema">Problema</string>
    <string name="config_problema_hint">Detalles del problema o ruta incorrecta</string>
    <string name="config_mensaje">Los datos proporcionados son para fines de calidad y no se compartirán con ninguna empresa de terceros</string>
    <string name="config_enviar">Enviar</string>

    <string name="info_actualizar_title">Actualizar</string>
    <string name="info_actualizar">Descargar rutas y fotos con la versión más reciente</string>
    <string name="info_actualizar_button">Actualizar Datos</string>
    <string name="info_title">Información</string>
    <string name="info">Esta aplicación muestra las ruta en el mapa y la ubicación de los camiones en tiempo real, los datos son almacenados en la nube para una constante actualización y congruencia de los datos</string>
    <string name="info_contacto_title">Contacto</string>
    <string name="info_contacto">antonioarcosmarco@gmail.com</string>

    <string name="editText_ruta">Ingresa el numero de camión</string>

</resources>