<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_test.ui.home.MapsActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.project_test.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_see_routes" >
        <action
            android:id="@+id/action_nav_routes_to_mapa_rutas"
            app:destination="@id/mapa_rutas" />
    </fragment>

    <fragment
        android:id="@+id/nav_real_time_routes"
        android:name="com.example.project_test.ui.realTimeRoutes.RTRFragment"
        android:label="@string/menu_real_time_routes"
        tools:layout="@layout/fragment_real_time_routes" />

    <fragment
        android:id="@+id/nav_report_problem"
        android:name="com.example.project_test.ui.reportProblem.ReportProFragment"
        android:label="@string/menu_report_problem"
        tools:layout="@layout/fragment_report_problem"/>

    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.project_test.ui.Configuration.ConfigFragment"
        android:label="@string/menu_configuration"/>

    <fragment
        android:id="@+id/mapa_rutas"
        android:name="com.example.project_test.ui.routes.MapaRutas"
        android:label="@string/menu_routes">
        <argument
            android:name="Ruta"
            app:argType="string" />
    </fragment>


</navigation>